Fix Big-10 school suggestion overflow

--- a/client/style.css
+++ b/client/style.css
@@ -73,7 +73,7 @@ ul {
 }
 
 .results li {
-  margin: 100px;
+  margin: 50px;
   background-color: white;
   border-radius: 25px;
   display: flex;
